Bug 19700 - ICE in final_scan_insn with O1 -g -march=athlon-xp -mfpmath=sse
Summary: ICE in final_scan_insn with O1 -g -march=athlon-xp -mfpmath=sse
Status: RESOLVED FIXED
Alias: None
Product: gcc
Classification: Unclassified
Component: target (show other bugs)
Version: 4.0.0
: P2 normal
Target Milestone: 4.0.0
Assignee: Richard Henderson
URL:
Keywords: ice-on-valid-code, ssemmx
Depends on:
Blocks:
 
Reported: 2005-01-29 21:09 UTC by Thomas Koenig
Modified: 2005-01-30 18:09 UTC (History)
1 user (show)

See Also:
Host:
Target: i686-pc-linux-gnu
Build:
Known to work:
Known to fail:
Last reconfirmed: 2005-01-30 02:48:22


Attachments
Failing source code (1.90 KB, text/plain)
2005-01-29 21:11 UTC, Thomas Koenig
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Thomas Koenig 2005-01-29 21:09:50 UTC
Compiling LAPACK:

gfortran -O1 -g -march=athlon-xp -mfpmath=sse  -c slanv2.f
slanv2.f: In function 'slanv2':
slanv2.f:202: error: could not split insn
(insn 95 567 566 slanv2.f:78 (parallel [
            (set (reg:SF 21 xmm0)
                (unspec:SF [
                        (reg:SF 26 xmm5 [123])
                        (const_vector:V4SF [
                                (const_double:SF 2147483392 [0x7fffff00] +NaN
[+NaN])
                                (const_double:SF 0 [0x0] 0.0 [0x0.0p+0])
                                (const_double:SF 0 [0x0] 0.0 [0x0.0p+0])
                                (const_double:SF 0 [0x0] 0.0 [0x0.0p+0])
                            ])
                        (reg:SF 22 xmm1)
                        (reg:V4SF 21 xmm0)
                    ] 100))
            (clobber (reg:V4SF 22 xmm1))
        ]) 251 {*copysignsf3} (insn_list:REG_DEP_TRUE 92 (insn_list:REG_DEP_TRUE
93 (insn_list:REG_DEP_TRUE 94 (nil))))
    (expr_list:REG_DEAD (reg:SF 22 xmm1)
        (expr_list:REG_UNUSED (reg:V4SF 22 xmm1)
            (nil))))
slanv2.f:202: internal compiler error: in final_scan_insn, at final.c:2501
Please submit a full bug report,
with preprocessed source if appropriate.
See <URL:http://gcc.gnu.org/bugs.html> for instructions.
make[1]: *** [slanv2.o] Error 1
make[1]: Leaving directory `/home/ig25/LAPACK/SRC'
make: *** [lapacklib] Error 2
$ gfortran -v
Using built-in specs.
Configured with: ../gcc/configure --prefix=/home/ig25 --enable-languages=c,f95
Thread model: posix
gcc version 4.0.0 20050129 (experimental)
Comment 1 Thomas Koenig 2005-01-29 21:11:18 UTC
Created attachment 8104 [details]
Failing source code
Comment 2 GCC Commits 2005-01-30 17:48:33 UTC
Subject: Bug 19700

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	rth@gcc.gnu.org	2005-01-30 17:48:11

Modified files:
	gcc            : ChangeLog 
	gcc/config/i386: i386-protos.h i386.c i386.md 

Log message:
	PR target/19700
	* config/i386/i386.c (ix86_expand_copysign): New.
	(ix86_split_copysign_const): New.
	(ix86_split_copysign_var): Rename from ix86_split_copysign,
	rearrange op1/nmask operands.
	* config/i386/i386-protos.h: Update.
	* config/i386/i386.md (copysignsf3): Use ix86_expand_copysign.
	(copysigndf3): Likewise.
	(copysignsf3_const, copysigndf3_const): New.
	(copysignsf3_var): Rename from copysignsf3, split out splitter
	and fix split predicate for X constraint.
	(copysigndf3_var): Similarly.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/ChangeLog.diff?cvsroot=gcc&r1=2.7331&r2=2.7332
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/i386/i386-protos.h.diff?cvsroot=gcc&r1=1.129&r2=1.130
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/i386/i386.c.diff?cvsroot=gcc&r1=1.792&r2=1.793
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/config/i386/i386.md.diff?cvsroot=gcc&r1=1.615&r2=1.616

Comment 3 GCC Commits 2005-01-30 17:55:20 UTC
Subject: Bug 19700

CVSROOT:	/cvs/gcc
Module name:	gcc
Changes by:	rth@gcc.gnu.org	2005-01-30 17:55:13

Added files:
	gcc/testsuite/gcc.c-torture/execute/ieee: copysign2.c 

Log message:
	PR 19700 testcase.

Patches:
http://gcc.gnu.org/cgi-bin/cvsweb.cgi/gcc/gcc/testsuite/gcc.c-torture/execute/ieee/copysign2.c.diff?cvsroot=gcc&r1=NONE&r2=1.1

Comment 4 Richard Henderson 2005-01-30 18:06:33 UTC
Fixed.